Day 2nd Practise

--- a/Day 2/js_function_parameter.html
+++ b/Day 2/js_function_parameter.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         function greeting(name, qualification){
-            document.write("Good Morning Mr. " + name + "I Hope you're fine.... Did you passed "+ qualification +" yet?")
+            document.write("Good Morning Mr. " + name + "I Hope you're fine.... Did you passed your "+ qualification +" yet?")
         }
         greeting("Khan", "FSc");
     </script>
