--- a/Day 6/Image_Map.html
+++ b/Day 6/Image_Map.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Map</title>
+  <style>
+    .workplace {
+      width: 500px;
+      height: 500px;
+      background-color: #ccc;
+      border: 1px solid black;
+    }
+  </style>
+</head>
 <body>
-
-<h2>Image Maps</h2>
-
-<p>Click on the cup of coffee to execute a JavaScript function:</p>
-
-<img src="images/workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
-
-<map name="workmap">
-  <area shape="circle" coords="337,300,44" href="coffee.htm" onclick="myFunction()">
-</map>
-
-<script>
-function myFunction() {
-  alert("You clicked the coffee cup!");
-}
-</script>
-
+  <h2>Image Maps</h2>
+  <p>Click on the cup of coffee to execute a JavaScript function:</p>
+  <img src="images/workplace.jpg" class="workplace" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <map name="workmap">
+    <area shape="circle" coords="337,300,44" href="coffee.htm" onclick="myFunction()">
+  </map>
+  <script>
+    function myFunction() {
+      alert("You clicked the coffee cup!");
+    }
+  </script>
 </body>
 </html>
+
 
